--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nx/js": "20.1.4",
     "@nx/playwright": "20.1.4",
     "@nx/react": "20.1.4",
+    "@nx/vite": "20.1.4",
     "@nx/web": "20.1.4",
     "@nx/webpack": "20.1.4",
     "@nx/workspace": "20.1.4",
@@ -34,6 +35,9 @@
     "@types/node": "18.16.9",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "@vitest/coverage-v8": "^1.0.4",
+    "@vitest/ui": "^1.3.1",
     "babel-jest": "^29.7.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
@@ -44,14 +48,18 @@
     "eslint-plugin-react-hooks": "5.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "~22.1.0",
     "nx": "20.1.4",
     "prettier": "^2.6.2",
     "react-refresh": "^0.10.0",
+    "sass": "^1.55.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~5.5.2",
     "typescript-eslint": "^8.0.0",
+    "vite": "^5.0.0",
+    "vitest": "^1.3.1",
     "webpack-cli": "^5.1.4"
   }
 }
