--- a/nx.json
+++ b/nx.json
@@ -76,5 +76,10 @@
         "unitTestRunner": "vitest"
       }
     }
+  },
+  "release": {
+    "version": {
+      "conventionalCommits": true
+    }
   }
 }
